openshift/service-actuator.yaml
kind: Service
apiVersion: v1
metadata:
  name: raas-actuator
  namespace: aas-dev
  labels:
    app: raas
    type: actuator
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: raas
